--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-h1 { font-family: Consolas, monaco, monospace; font-size: 1.7em; font-style: normal; font-variant: normal; font-weight: 700; line-height: 1.9em; }
-h3 { font-family: Consolas, monaco, monospace; font-size: 1em; font-style: normal; font-variant: normal; font-weight: 400; line-height: 1.1em; font-style:italic; color: #777;}
-p { font-family: Consolas, monaco, monospace; font-size: 1em; font-style: normal; font-variant: normal; font-weight: 500; line-height: 1.1em; }
-blockquote { font-family: Consolas, monaco, monospace; font-size: 1.5em; font-style: normal; font-variant: normal; font-weight: 400; line-height: 2em; }
-pre { font-family: Consolas, monaco, monospace; font-size: 0.9em; font-style: normal; font-variant: normal; font-weight: 400; line-height: 1.33em; }
-
 body {
     background-color: #f3f3f3;
+    font-size: 1.2em; 
 }
+
+
+h1 { font-family: Consolas, monaco, monospace; font-size: 170%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 190%; }
+h3 { font-family: Consolas, monaco, monospace; font-size: 100%; font-style: normal; font-variant: normal; font-weight: 400; line-height: 110%; font-style:italic; color: #777;}
+p { font-family: Consolas, monaco, monospace; font-size: 100%; font-style: normal; font-variant: normal; font-weight: 500; line-height: 110%; }
+blockquote { font-family: Consolas, monaco, monospace; font-size: 150%; font-style: normal; font-variant: normal; font-weight: 400; line-height: 200%; }
+pre { font-family: Consolas, monaco, monospace; font-size: 90%; font-style: normal; font-variant: normal; font-weight: 400; line-height: 133%; }
 
 .container {
     width: 80%;
@@ -46,13 +48,16 @@ body {
 }
 
 @media screen and (min-width: 1367px) {
-    .container {width: 40%;}
+    .container { width: 40%; }
+    body { font-size: 1.2em; }
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1366px) {
-    .container {width: 60%;}
+    .container { width: 60%; }
+    body { font-size: 1.2em; }
 }
 
 @media screen and (max-width: 1080px) {
-    .container {width: 90%;}
+    .container { width: 90%; }
+    body { font-size: 1.6em; }
 }
