--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ pre { font-family: Consolas, monaco, monospace; font-size: 90%; font-style: norm
     font-weight: 700;
     line-height: 190%;
     color: #333;
-    width:80%;
+    width:20em;
     border: 1px solid #777;
     border-radius: 1mm;
 }
@@ -59,13 +59,21 @@ pre { font-family: Consolas, monaco, monospace; font-size: 90%; font-style: norm
     font-weight: 500;
     line-height: 190%;
     color: #eee;
-    width:20%;
+    width:5em;
     border: 1px solid #777;
     border-radius: 1mm;
 }
 
 #history {
     padding: 1em;
+    overflow-y: scroll;
+    height:30%;
+}
+
+#text_limit {
+    color: #777;
+    margin-left: -3.8em;
+    text-align: left;
 }
 
 .time {
